# BellaVita

./: .gitignore  CHANGELOG.md  LICENSE  README.md  club_compras_macos.spec  club_compras_windows.spec  pyproject.toml  requirements.txt
.github/workflows/: build-desktop.yml  build-windows-installer.yml
app/: __init__.py  main.py
app/config/: settings.py
app/database/: bootstrap.py  schema.py
app/repositories/: customers.py  dashboard.py  history.py  loyalty.py  rewards.py  settings.py
app/security/: passwords.py
app/services/: backups.py  birthday_promotions.py  csv_import.py  customers.py  purchases.py  rewards.py  settings.py
app/ui/: backups_page.py  birthdays_page.py  branding.py  csv_import_page.py  customer_dialog.py  customer_history_page.py  loyalty_card_page.py  main_window.py  purchase_page.py  reward_dialogs.py  rewards_page.py  settings_page.py
app/utils/: dates.py  money.py  paths.py  resources.py
assets/: README.md
assets/icons/: app_icon.icns
docs/: auditoria_funcional.md  guia_cliente_instalacion.md  importacion_masiva_clientes.md  instalacion_windows.md  manual_usuario.md  promociones_cumpleanos.md
installer/: club_compras.iss
installer/windows/: ClubDeCompras.iss  datos_conservados.txt
scripts/: build_macos.sh  build_windows.ps1  run_dev.ps1
tests/: test_backups.py  test_branding_resources.py  test_csv_import.py  test_customer_birthdays.py  test_purchase_page_ui.py  test_purchases.py  test_rewards_history_dashboard.py  test_settings_and_purchase_flow.py  test_smoke.py
